; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_map.c_SnapPlane.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_map.c_SnapPlane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@distanceEpsilon = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SnapPlane(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @SnapNormal(i32 %5)
  %7 = load i64*, i64** %4, align 8
  %8 = load i64, i64* %7, align 8
  %9 = load i64*, i64** %4, align 8
  %10 = load i64, i64* %9, align 8
  %11 = call i64 @Q_rint(i64 %10)
  %12 = sub nsw i64 %8, %11
  %13 = call i64 @fabs(i64 %12)
  %14 = load i64, i64* @distanceEpsilon, align 8
  %15 = icmp slt i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i64*, i64** %4, align 8
  %18 = load i64, i64* %17, align 8
  %19 = call i64 @Q_rint(i64 %18)
  %20 = load i64*, i64** %4, align 8
  store i64 %19, i64* %20, align 8
  br label %21

21:                                               ; preds = %16, %2
  ret void
}

declare dso_local i32 @SnapNormal(i32) #1

declare dso_local i64 @fabs(i64) #1

declare dso_local i64 @Q_rint(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
